PL_24-25/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM id ; declarations block .
Rule 2     block -> BEGIN statements END terminator
Rule 3     declarations -> VAR declaration_list ;
Rule 4     declarations -> CONST declaration_list ;
Rule 5     declarations -> VAR declaration_list CONST declaration_list
Rule 6     declarations -> CONST declaration_list VAR declaration_list
Rule 7     declarations -> <empty>
Rule 8     declaration_list -> declaration
Rule 9     declaration_list -> declaration_list ; declaration
Rule 10    declaration -> id_list : type
Rule 11    id_list -> id
Rule 12    id_list -> id_list , id
Rule 13    type -> INTEGER
Rule 14    type -> REAL
Rule 15    type -> STRING
Rule 16    type -> CHAR
Rule 17    type -> BOOLEAN
Rule 18    type -> ARRAY [ expression ] OF type
Rule 19    statements -> statement
Rule 20    statements -> statements statement
Rule 21    statement -> block
Rule 22    statement -> assignment
Rule 23    statement -> if_statement
Rule 24    statement -> while_statement
Rule 25    statement -> for_statement
Rule 26    statement -> comments
Rule 27    statement -> function_call
Rule 28    assignment -> id ASSIGN expression
Rule 29    if_statement -> IF exprBool THEN statement ifCont
Rule 30    ifCont -> <empty>
Rule 31    ifCont -> ELSE statement
Rule 32    while_statement -> WHILE expression DO statement
Rule 33    for_statement -> FOR id ASSIGN expression forCont
Rule 34    forCont -> TO expression DO statement
Rule 35    forCont -> DOWNTO expression DO statement
Rule 36    exprBool -> expression
Rule 37    exprBool -> expression opRel expression
Rule 38    exprBool -> NOT expression
Rule 39    opRel -> =
Rule 40    opRel -> NOTEQUAL
Rule 41    opRel -> <
Rule 42    opRel -> >
Rule 43    opRel -> MINOREQUALS
Rule 44    opRel -> LARGEREQUALS
Rule 45    expression -> term
Rule 46    expression -> expression opAdd term
Rule 47    expression -> num TWODOTS num
Rule 48    opAdd -> +
Rule 49    opAdd -> -
Rule 50    opAdd -> OR
Rule 51    term -> factor
Rule 52    term -> term opMul factor
Rule 53    opMul -> *
Rule 54    opMul -> /
Rule 55    opMul -> %
Rule 56    opMul -> AND
Rule 57    opMul -> MOD
Rule 58    opMul -> DIV
Rule 59    factor -> const terminator
Rule 60    factor -> var terminator
Rule 61    factor -> function_call
Rule 62    factor -> ( exprBool )
Rule 63    const -> num
Rule 64    const -> text
Rule 65    const -> TRUE
Rule 66    const -> FALSE
Rule 67    var -> id
Rule 68    var -> id [ expression ]
Rule 69    function_call -> id ( ) terminator
Rule 70    function_call -> id ( arg_list ) terminator
Rule 71    terminator -> ;
Rule 72    terminator -> <empty>
Rule 73    arg_list -> expression
Rule 74    arg_list -> arg_list , expression
Rule 75    comments -> comment

Terminals, with rules where they appear

%                    : 55
(                    : 62 69 70
)                    : 62 69 70
*                    : 53
+                    : 48
,                    : 12 74
-                    : 49
.                    : 1
/                    : 54
:                    : 10
;                    : 1 3 4 9 71
<                    : 41
=                    : 39
>                    : 42
AND                  : 56
ARRAY                : 18
ASSIGN               : 28 33
BEGIN                : 2
BOOLEAN              : 17
CHAR                 : 16
CONST                : 4 5 6
DIV                  : 58
DO                   : 32 34 35
DOWNTO               : 35
ELSE                 : 31
END                  : 2
FALSE                : 66
FOR                  : 33
IF                   : 29
INTEGER              : 13
LARGEREQUALS         : 44
MINOREQUALS          : 43
MOD                  : 57
NOT                  : 38
NOTEQUAL             : 40
OF                   : 18
OR                   : 50
PROGRAM              : 1
REAL                 : 14
STRING               : 15
THEN                 : 29
TO                   : 34
TRUE                 : 65
TWODOTS              : 47
VAR                  : 3 5 6
WHILE                : 32
[                    : 18 68
]                    : 18 68
comment              : 75
error                : 
id                   : 1 11 12 28 33 67 68 69 70
num                  : 47 47 63
text                 : 64

Nonterminals, with rules where they appear

arg_list             : 70 74
assignment           : 22
block                : 1 21
comments             : 26
const                : 59
declaration          : 8 9
declaration_list     : 3 4 5 5 6 6 9
declarations         : 1
exprBool             : 29 62
expression           : 18 28 32 33 34 35 36 37 37 38 46 68 73 74
factor               : 51 52
forCont              : 33
for_statement        : 25
function_call        : 27 61
id_list              : 10 12
ifCont               : 29
if_statement         : 23
opAdd                : 46
opMul                : 52
opRel                : 37
program              : 0
statement            : 19 20 29 31 32 34 35
statements           : 2 20
term                 : 45 46 52
terminator           : 2 59 60 69 70
type                 : 10 18
var                  : 60
while_statement      : 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM id ; declarations block .

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . id ; declarations block .

    id              shift and go to state 3


state 3

    (1) program -> PROGRAM id . ; declarations block .

    ;               shift and go to state 4


state 4

    (1) program -> PROGRAM id ; . declarations block .
    (3) declarations -> . VAR declaration_list ;
    (4) declarations -> . CONST declaration_list ;
    (5) declarations -> . VAR declaration_list CONST declaration_list
    (6) declarations -> . CONST declaration_list VAR declaration_list
    (7) declarations -> .

    VAR             shift and go to state 6
    CONST           shift and go to state 7
    BEGIN           reduce using rule 7 (declarations -> .)

    declarations                   shift and go to state 5

state 5

    (1) program -> PROGRAM id ; declarations . block .
    (2) block -> . BEGIN statements END terminator

    BEGIN           shift and go to state 9

    block                          shift and go to state 8

state 6

    (3) declarations -> VAR . declaration_list ;
    (5) declarations -> VAR . declaration_list CONST declaration_list
    (8) declaration_list -> . declaration
    (9) declaration_list -> . declaration_list ; declaration
    (10) declaration -> . id_list : type
    (11) id_list -> . id
    (12) id_list -> . id_list , id

    id              shift and go to state 13

    declaration_list               shift and go to state 10
    declaration                    shift and go to state 11
    id_list                        shift and go to state 12

state 7

    (4) declarations -> CONST . declaration_list ;
    (6) declarations -> CONST . declaration_list VAR declaration_list
    (8) declaration_list -> . declaration
    (9) declaration_list -> . declaration_list ; declaration
    (10) declaration -> . id_list : type
    (11) id_list -> . id
    (12) id_list -> . id_list , id

    id              shift and go to state 13

    declaration_list               shift and go to state 14
    declaration                    shift and go to state 11
    id_list                        shift and go to state 12

state 8

    (1) program -> PROGRAM id ; declarations block . .

    .               shift and go to state 15


state 9

    (2) block -> BEGIN . statements END terminator
    (19) statements -> . statement
    (20) statements -> . statements statement
    (21) statement -> . block
    (22) statement -> . assignment
    (23) statement -> . if_statement
    (24) statement -> . while_statement
    (25) statement -> . for_statement
    (26) statement -> . comments
    (27) statement -> . function_call
    (2) block -> . BEGIN statements END terminator
    (28) assignment -> . id ASSIGN expression
    (29) if_statement -> . IF exprBool THEN statement ifCont
    (32) while_statement -> . WHILE expression DO statement
    (33) for_statement -> . FOR id ASSIGN expression forCont
    (75) comments -> . comment
    (69) function_call -> . id ( ) terminator
    (70) function_call -> . id ( arg_list ) terminator

    BEGIN           shift and go to state 9
    id              shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    comment         shift and go to state 29

    statements                     shift and go to state 16
    statement                      shift and go to state 17
    block                          shift and go to state 18
    assignment                     shift and go to state 19
    if_statement                   shift and go to state 20
    while_statement                shift and go to state 21
    for_statement                  shift and go to state 22
    comments                       shift and go to state 23
    function_call                  shift and go to state 24

state 10

    (3) declarations -> VAR declaration_list . ;
    (5) declarations -> VAR declaration_list . CONST declaration_list
    (9) declaration_list -> declaration_list . ; declaration

    ;               shift and go to state 30
    CONST           shift and go to state 31


state 11

    (8) declaration_list -> declaration .

    ;               reduce using rule 8 (declaration_list -> declaration .)
    CONST           reduce using rule 8 (declaration_list -> declaration .)
    VAR             reduce using rule 8 (declaration_list -> declaration .)
    BEGIN           reduce using rule 8 (declaration_list -> declaration .)


state 12

    (10) declaration -> id_list . : type
    (12) id_list -> id_list . , id

    :               shift and go to state 32
    ,               shift and go to state 33


state 13

    (11) id_list -> id .

    :               reduce using rule 11 (id_list -> id .)
    ,               reduce using rule 11 (id_list -> id .)


state 14

    (4) declarations -> CONST declaration_list . ;
    (6) declarations -> CONST declaration_list . VAR declaration_list
    (9) declaration_list -> declaration_list . ; declaration

    ;               shift and go to state 34
    VAR             shift and go to state 35


state 15

    (1) program -> PROGRAM id ; declarations block . .

    $end            reduce using rule 1 (program -> PROGRAM id ; declarations block . .)


state 16

    (2) block -> BEGIN statements . END terminator
    (20) statements -> statements . statement
    (21) statement -> . block
    (22) statement -> . assignment
    (23) statement -> . if_statement
    (24) statement -> . while_statement
    (25) statement -> . for_statement
    (26) statement -> . comments
    (27) statement -> . function_call
    (2) block -> . BEGIN statements END terminator
    (28) assignment -> . id ASSIGN expression
    (29) if_statement -> . IF exprBool THEN statement ifCont
    (32) while_statement -> . WHILE expression DO statement
    (33) for_statement -> . FOR id ASSIGN expression forCont
    (75) comments -> . comment
    (69) function_call -> . id ( ) terminator
    (70) function_call -> . id ( arg_list ) terminator

    END             shift and go to state 36
    BEGIN           shift and go to state 9
    id              shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    comment         shift and go to state 29

    statement                      shift and go to state 37
    block                          shift and go to state 18
    assignment                     shift and go to state 19
    if_statement                   shift and go to state 20
    while_statement                shift and go to state 21
    for_statement                  shift and go to state 22
    comments                       shift and go to state 23
    function_call                  shift and go to state 24

state 17

    (19) statements -> statement .

    END             reduce using rule 19 (statements -> statement .)
    BEGIN           reduce using rule 19 (statements -> statement .)
    id              reduce using rule 19 (statements -> statement .)
    IF              reduce using rule 19 (statements -> statement .)
    WHILE           reduce using rule 19 (statements -> statement .)
    FOR             reduce using rule 19 (statements -> statement .)
    comment         reduce using rule 19 (statements -> statement .)


state 18

    (21) statement -> block .

    END             reduce using rule 21 (statement -> block .)
    BEGIN           reduce using rule 21 (statement -> block .)
    id              reduce using rule 21 (statement -> block .)
    IF              reduce using rule 21 (statement -> block .)
    WHILE           reduce using rule 21 (statement -> block .)
    FOR             reduce using rule 21 (statement -> block .)
    comment         reduce using rule 21 (statement -> block .)
    ELSE            reduce using rule 21 (statement -> block .)


state 19

    (22) statement -> assignment .

    END             reduce using rule 22 (statement -> assignment .)
    BEGIN           reduce using rule 22 (statement -> assignment .)
    id              reduce using rule 22 (statement -> assignment .)
    IF              reduce using rule 22 (statement -> assignment .)
    WHILE           reduce using rule 22 (statement -> assignment .)
    FOR             reduce using rule 22 (statement -> assignment .)
    comment         reduce using rule 22 (statement -> assignment .)
    ELSE            reduce using rule 22 (statement -> assignment .)


state 20

    (23) statement -> if_statement .

    END             reduce using rule 23 (statement -> if_statement .)
    BEGIN           reduce using rule 23 (statement -> if_statement .)
    id              reduce using rule 23 (statement -> if_statement .)
    IF              reduce using rule 23 (statement -> if_statement .)
    WHILE           reduce using rule 23 (statement -> if_statement .)
    FOR             reduce using rule 23 (statement -> if_statement .)
    comment         reduce using rule 23 (statement -> if_statement .)
    ELSE            reduce using rule 23 (statement -> if_statement .)


state 21

    (24) statement -> while_statement .

    END             reduce using rule 24 (statement -> while_statement .)
    BEGIN           reduce using rule 24 (statement -> while_statement .)
    id              reduce using rule 24 (statement -> while_statement .)
    IF              reduce using rule 24 (statement -> while_statement .)
    WHILE           reduce using rule 24 (statement -> while_statement .)
    FOR             reduce using rule 24 (statement -> while_statement .)
    comment         reduce using rule 24 (statement -> while_statement .)
    ELSE            reduce using rule 24 (statement -> while_statement .)


state 22

    (25) statement -> for_statement .

    END             reduce using rule 25 (statement -> for_statement .)
    BEGIN           reduce using rule 25 (statement -> for_statement .)
    id              reduce using rule 25 (statement -> for_statement .)
    IF              reduce using rule 25 (statement -> for_statement .)
    WHILE           reduce using rule 25 (statement -> for_statement .)
    FOR             reduce using rule 25 (statement -> for_statement .)
    comment         reduce using rule 25 (statement -> for_statement .)
    ELSE            reduce using rule 25 (statement -> for_statement .)


state 23

    (26) statement -> comments .

    END             reduce using rule 26 (statement -> comments .)
    BEGIN           reduce using rule 26 (statement -> comments .)
    id              reduce using rule 26 (statement -> comments .)
    IF              reduce using rule 26 (statement -> comments .)
    WHILE           reduce using rule 26 (statement -> comments .)
    FOR             reduce using rule 26 (statement -> comments .)
    comment         reduce using rule 26 (statement -> comments .)
    ELSE            reduce using rule 26 (statement -> comments .)


state 24

    (27) statement -> function_call .

    END             reduce using rule 27 (statement -> function_call .)
    BEGIN           reduce using rule 27 (statement -> function_call .)
    id              reduce using rule 27 (statement -> function_call .)
    IF              reduce using rule 27 (statement -> function_call .)
    WHILE           reduce using rule 27 (statement -> function_call .)
    FOR             reduce using rule 27 (statement -> function_call .)
    comment         reduce using rule 27 (statement -> function_call .)
    ELSE            reduce using rule 27 (statement -> function_call .)


state 25

    (28) assignment -> id . ASSIGN expression
    (69) function_call -> id . ( ) terminator
    (70) function_call -> id . ( arg_list ) terminator

    ASSIGN          shift and go to state 38
    (               shift and go to state 39


state 26

    (29) if_statement -> IF . exprBool THEN statement ifCont
    (36) exprBool -> . expression
    (37) exprBool -> . expression opRel expression
    (38) exprBool -> . NOT expression
    (45) expression -> . term
    (46) expression -> . expression opAdd term
    (47) expression -> . num TWODOTS num
    (51) term -> . factor
    (52) term -> . term opMul factor
    (59) factor -> . const terminator
    (60) factor -> . var terminator
    (61) factor -> . function_call
    (62) factor -> . ( exprBool )
    (63) const -> . num
    (64) const -> . text
    (65) const -> . TRUE
    (66) const -> . FALSE
    (67) var -> . id
    (68) var -> . id [ expression ]
    (69) function_call -> . id ( ) terminator
    (70) function_call -> . id ( arg_list ) terminator

    NOT             shift and go to state 42
    num             shift and go to state 44
    (               shift and go to state 49
    text            shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    id              shift and go to state 53

    exprBool                       shift and go to state 40
    expression                     shift and go to state 41
    term                           shift and go to state 43
    factor                         shift and go to state 45
    const                          shift and go to state 46
    var                            shift and go to state 47
    function_call                  shift and go to state 48

state 27

    (32) while_statement -> WHILE . expression DO statement
    (45) expression -> . term
    (46) expression -> . expression opAdd term
    (47) expression -> . num TWODOTS num
    (51) term -> . factor
    (52) term -> . term opMul factor
    (59) factor -> . const terminator
    (60) factor -> . var terminator
    (61) factor -> . function_call
    (62) factor -> . ( exprBool )
    (63) const -> . num
    (64) const -> . text
    (65) const -> . TRUE
    (66) const -> . FALSE
    (67) var -> . id
    (68) var -> . id [ expression ]
    (69) function_call -> . id ( ) terminator
    (70) function_call -> . id ( arg_list ) terminator

    num             shift and go to state 44
    (               shift and go to state 49
    text            shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    id              shift and go to state 53

    expression                     shift and go to state 54
    term                           shift and go to state 43
    factor                         shift and go to state 45
    const                          shift and go to state 46
    var                            shift and go to state 47
    function_call                  shift and go to state 48

state 28

    (33) for_statement -> FOR . id ASSIGN expression forCont

    id              shift and go to state 55


state 29

    (75) comments -> comment .

    END             reduce using rule 75 (comments -> comment .)
    BEGIN           reduce using rule 75 (comments -> comment .)
    id              reduce using rule 75 (comments -> comment .)
    IF              reduce using rule 75 (comments -> comment .)
    WHILE           reduce using rule 75 (comments -> comment .)
    FOR             reduce using rule 75 (comments -> comment .)
    comment         reduce using rule 75 (comments -> comment .)
    ELSE            reduce using rule 75 (comments -> comment .)


state 30

    (3) declarations -> VAR declaration_list ; .
    (9) declaration_list -> declaration_list ; . declaration
    (10) declaration -> . id_list : type
    (11) id_list -> . id
    (12) id_list -> . id_list , id

    BEGIN           reduce using rule 3 (declarations -> VAR declaration_list ; .)
    id              shift and go to state 13

    declaration                    shift and go to state 56
    id_list                        shift and go to state 12

state 31

    (5) declarations -> VAR declaration_list CONST . declaration_list
    (8) declaration_list -> . declaration
    (9) declaration_list -> . declaration_list ; declaration
    (10) declaration -> . id_list : type
    (11) id_list -> . id
    (12) id_list -> . id_list , id

    id              shift and go to state 13

    declaration_list               shift and go to state 57
    declaration                    shift and go to state 11
    id_list                        shift and go to state 12

state 32

    (10) declaration -> id_list : . type
    (13) type -> . INTEGER
    (14) type -> . REAL
    (15) type -> . STRING
    (16) type -> . CHAR
    (17) type -> . BOOLEAN
    (18) type -> . ARRAY [ expression ] OF type

    INTEGER         shift and go to state 59
    REAL            shift and go to state 60
    STRING          shift and go to state 61
    CHAR            shift and go to state 62
    BOOLEAN         shift and go to state 63
    ARRAY           shift and go to state 64

    type                           shift and go to state 58

state 33

    (12) id_list -> id_list , . id

    id              shift and go to state 65


state 34

    (4) declarations -> CONST declaration_list ; .
    (9) declaration_list -> declaration_list ; . declaration
    (10) declaration -> . id_list : type
    (11) id_list -> . id
    (12) id_list -> . id_list , id

    BEGIN           reduce using rule 4 (declarations -> CONST declaration_list ; .)
    id              shift and go to state 13

    declaration                    shift and go to state 56
    id_list                        shift and go to state 12

state 35

    (6) declarations -> CONST declaration_list VAR . declaration_list
    (8) declaration_list -> . declaration
    (9) declaration_list -> . declaration_list ; declaration
    (10) declaration -> . id_list : type
    (11) id_list -> . id
    (12) id_list -> . id_list , id

    id              shift and go to state 13

    declaration_list               shift and go to state 66
    declaration                    shift and go to state 11
    id_list                        shift and go to state 12

state 36

    (2) block -> BEGIN statements END . terminator
    (71) terminator -> . ;
    (72) terminator -> .

    ;               shift and go to state 68
    .               reduce using rule 72 (terminator -> .)
    END             reduce using rule 72 (terminator -> .)
    BEGIN           reduce using rule 72 (terminator -> .)
    id              reduce using rule 72 (terminator -> .)
    IF              reduce using rule 72 (terminator -> .)
    WHILE           reduce using rule 72 (terminator -> .)
    FOR             reduce using rule 72 (terminator -> .)
    comment         reduce using rule 72 (terminator -> .)
    ELSE            reduce using rule 72 (terminator -> .)

    terminator                     shift and go to state 67

state 37

    (20) statements -> statements statement .

    END             reduce using rule 20 (statements -> statements statement .)
    BEGIN           reduce using rule 20 (statements -> statements statement .)
    id              reduce using rule 20 (statements -> statements statement .)
    IF              reduce using rule 20 (statements -> statements statement .)
    WHILE           reduce using rule 20 (statements -> statements statement .)
    FOR             reduce using rule 20 (statements -> statements statement .)
    comment         reduce using rule 20 (statements -> statements statement .)


state 38

    (28) assignment -> id ASSIGN . expression
    (45) expression -> . term
    (46) expression -> . expression opAdd term
    (47) expression -> . num TWODOTS num
    (51) term -> . factor
    (52) term -> . term opMul factor
    (59) factor -> . const terminator
    (60) factor -> . var terminator
    (61) factor -> . function_call
    (62) factor -> . ( exprBool )
    (63) const -> . num
    (64) const -> . text
    (65) const -> . TRUE
    (66) const -> . FALSE
    (67) var -> . id
    (68) var -> . id [ expression ]
    (69) function_call -> . id ( ) terminator
    (70) function_call -> . id ( arg_list ) terminator

    num             shift and go to state 44
    (               shift and go to state 49
    text            shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    id              shift and go to state 53

    expression                     shift and go to state 69
    term                           shift and go to state 43
    factor                         shift and go to state 45
    const                          shift and go to state 46
    var                            shift and go to state 47
    function_call                  shift and go to state 48

state 39

    (69) function_call -> id ( . ) terminator
    (70) function_call -> id ( . arg_list ) terminator
    (73) arg_list -> . expression
    (74) arg_list -> . arg_list , expression
    (45) expression -> . term
    (46) expression -> . expression opAdd term
    (47) expression -> . num TWODOTS num
    (51) term -> . factor
    (52) term -> . term opMul factor
    (59) factor -> . const terminator
    (60) factor -> . var terminator
    (61) factor -> . function_call
    (62) factor -> . ( exprBool )
    (63) const -> . num
    (64) const -> . text
    (65) const -> . TRUE
    (66) const -> . FALSE
    (67) var -> . id
    (68) var -> . id [ expression ]
    (69) function_call -> . id ( ) terminator
    (70) function_call -> . id ( arg_list ) terminator

    )               shift and go to state 70
    num             shift and go to state 44
    (               shift and go to state 49
    text            shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    id              shift and go to state 53

    arg_list                       shift and go to state 71
    expression                     shift and go to state 72
    term                           shift and go to state 43
    factor                         shift and go to state 45
    const                          shift and go to state 46
    var                            shift and go to state 47
    function_call                  shift and go to state 48

state 40

    (29) if_statement -> IF exprBool . THEN statement ifCont

    THEN            shift and go to state 73


state 41

    (36) exprBool -> expression .
    (37) exprBool -> expression . opRel expression
    (46) expression -> expression . opAdd term
    (39) opRel -> . =
    (40) opRel -> . NOTEQUAL
    (41) opRel -> . <
    (42) opRel -> . >
    (43) opRel -> . MINOREQUALS
    (44) opRel -> . LARGEREQUALS
    (48) opAdd -> . +
    (49) opAdd -> . -
    (50) opAdd -> . OR

    THEN            reduce using rule 36 (exprBool -> expression .)
    )               reduce using rule 36 (exprBool -> expression .)
    =               shift and go to state 76
    NOTEQUAL        shift and go to state 77
    <               shift and go to state 78
    >               shift and go to state 79
    MINOREQUALS     shift and go to state 80
    LARGEREQUALS    shift and go to state 81
    +               shift and go to state 82
    -               shift and go to state 83
    OR              shift and go to state 84

    opRel                          shift and go to state 74
    opAdd                          shift and go to state 75

state 42

    (38) exprBool -> NOT . expression
    (45) expression -> . term
    (46) expression -> . expression opAdd term
    (47) expression -> . num TWODOTS num
    (51) term -> . factor
    (52) term -> . term opMul factor
    (59) factor -> . const terminator
    (60) factor -> . var terminator
    (61) factor -> . function_call
    (62) factor -> . ( exprBool )
    (63) const -> . num
    (64) const -> . text
    (65) const -> . TRUE
    (66) const -> . FALSE
    (67) var -> . id
    (68) var -> . id [ expression ]
    (69) function_call -> . id ( ) terminator
    (70) function_call -> . id ( arg_list ) terminator

    num             shift and go to state 44
    (               shift and go to state 49
    text            shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52
    id              shift and go to state 53

    expression                     shift and go to state 85
    term                           shift and go to state 43
    factor                         shift and go to state 45
    const                          shift and go to state 46
    var                            shift and go to state 47
    function_call                  shift and go to state 48

state 43

    (45) expression -> term .
    (52) term -> term . opMul factor
    (53) opMul -> . *
    (54) opMul -> . /
    (55) opMul -> . %
    (56) opMul -> . AND
    (57) opMul -> . MOD
    (58) opMul -> . DIV

    =               reduce using rule 45 (expression -> term .)
    NOTEQUAL        reduce using rule 45 (expression -> term .)
    <               reduce using rule 45 (expression -> term .)
    >               reduce using rule 45 (expression -> term .)
    MINOREQUALS     reduce using rule 45 (expression -> term .)
    LARGEREQUALS    reduce using rule 45 (expression -> term .)
    +               reduce using rule 45 (expression -> term .)
    -               reduce using rule 45 (expression -> term .)
    OR              reduce using rule 45 (expression -> term .)
    THEN            reduce using rule 45 (expression -> term .)
    DO              reduce using rule 45 (expression -> term .)
    END             reduce using rule 45 (expression -> term .)
    BEGIN           reduce using rule 45 (expression -> term .)
    id              reduce using rule 45 (expression -> term .)
    IF              reduce using rule 45 (expression -> term .)
    WHILE           reduce using rule 45 (expression -> term .)
    FOR             reduce using rule 45 (expression -> term .)
    comment         reduce using rule 45 (expression -> term .)
    ELSE            reduce using rule 45 (expression -> term .)
    )               reduce using rule 45 (expression -> term .)
    ,               reduce using rule 45 (expression -> term .)
    ]               reduce using rule 45 (expression -> term .)
    TO              reduce using rule 45 (expression -> term .)
    DOWNTO          reduce using rule 45 (expression -> term .)
    *               shift and go to state 87
    /               shift and go to state 88
    %               shift and go to state 89
    AND             shift and go to state 90
    MOD             shift and go to state 91
    DIV             shift and go to state 92

    opMul                          shift and go to state 86

state 44

    (47) expression -> num . TWODOTS num
    (63) const -> num .
